# pepe_say-module-G

./: Guideline for setting std py directory to systems' path.rtf
pepe_say_proj/: This_is_dummy_file  pyproject.toml
pepe_say_proj/Pepe_say/: __main__.py  pepesay_module.py
